--- a/css/style.less
+++ b/css/style.less
@@ -263,12 +263,20 @@ body {
     .el-carousel__container {
         height: 100%;
     }
+    .el-carousel {
+        -webkit-transform: translateZ(0);
+        -moz-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+        -o-transform: translateZ(0);
+        transform: translateZ(0);
+    }
 }
 
 .filter {
     width: 100%;
     height: 120px;
     background: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     .filter-top {
         width: 100%;
         height: 60px;
@@ -333,7 +341,111 @@ body {
 
 .wrapper {
     width: 1480px;
-    margin: 0 auto;
+    margin: 70px auto;
+    position: relative;
+    >ul {
+        width: 100%;
+        &::after {
+            .clear;
+        }
+        >li {
+            width: 276.5px;
+            height: 298px;
+            overflow: hidden;
+            margin-right: 24px;
+            margin-bottom: 24px;
+            border: 1px solid transparent;
+            .transi;
+            &:hover {
+                border: 1px solid @border-color;
+                .info {
+                    background: #fff;
+                    .author {
+                        .float-right {
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+            &:nth-child(5n) {
+                margin-right: 0;
+            }
+            .img-container {
+                width: 100%;
+                height: 203px;
+                overflow: hidden;
+                position: relative;
+                .imgs {
+                    display: block;
+                    min-width: 100%;
+                    min-height: 100%;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    .abso;
+                }
+                .img-width {
+                    width: 100%;
+                }
+                .img-height {
+                    height: 100%;
+                }
+            }
+            .info {
+                width: 100%;
+                height: 95px;
+                .transi;
+                .title {
+                    padding: 0 8px;
+                    width: 100%;
+                    height: 40px;
+                    line-height: 40px;
+                    color: @text-color;
+                    border-bottom: 1px solid @border-color;
+                    font-size: 14px;
+                }
+                .author {
+                    padding: 0 8px;
+                    &::after {
+                        .clear;
+                    }
+                    span {
+                        font-size: 14px;
+                        color: @text-color;
+                        display: block;
+                        line-height: 25px;
+                        margin-top: 14px;
+                    }
+                    .float-right {
+                        opacity: 0;
+                        width: 93px;
+                        height: 25px;
+                        background: @text-hover;
+                        text-align: center;
+                        color: #fff;
+                        border-radius: 3px;
+                        .transi;
+                    }
+                }
+            }
+        }
+    }
+    .paging {
+        position: absolute;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        -o-transform: translateX(-50%);
+        transform: translateX(-50%);
+        .el-dialog,
+        .el-pager li {
+            background: transparent;
+        }
+        button {
+            background-color: transparent !important;
+        }
+    }
 }
 
 .footer {
