--- a/css/style.less
+++ b/css/style.less
@@ -460,11 +460,36 @@ body {
             color: @text-hover;
         }
     }
-    .wrapper{
+    .wrapper {
         width: 1200px;
         padding: 40px;
         margin-top: 50px;
         background: #fff;
+        -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        .line {
+            border-bottom: 1px dashed @border-color;
+            margin-bottom: 40px;
+            margin-top: 40px;
+        }
+        .item-text {
+            color: @text-color;
+            font-size: 14px;
+            margin-top: 5px;
+        }
+        .form-control-btn {
+            button {
+                padding: 10px 40px;
+                &:hover {
+                    background: #e2797d;
+                    border-color: #e2797d;
+                    color: #fff;
+                }
+            }
+        }
     }
 }
 
