--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,11 @@ body {
 .header .header-container {
   width: 1480px;
   margin: 0 auto;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .header .header-container::after {
   content: "";
@@ -204,6 +209,48 @@ body {
   color: #d3d3d3;
   cursor: pointer;
 }
+.header .upload {
+  width: 100px;
+  height: 36px;
+  position: relative;
+  top: 31px;
+  border: 1px solid #d3d3d3;
+  border-radius: 4px;
+  padding: 0 10px;
+  margin-left: 10px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.header .upload:hover {
+  border: 1px solid #d74b4f;
+}
+.header .upload:hover a,
+.header .upload:hover .icon-shangchuan {
+  color: #d74b4f;
+}
+.header .upload a {
+  font-size: 14px;
+  line-height: 36px;
+  color: #bbb;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.header .upload .icon-shangchuan {
+  line-height: 36px;
+  color: #bbb;
+  font-size: 16px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
 .banner {
   width: 100%;
   overflow: hidden;
@@ -221,7 +268,7 @@ body {
 }
 .filter {
   width: 100%;
-  height: 120px;
+  min-height: 120px;
   background: #fff;
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -231,17 +278,13 @@ body {
 }
 .filter .filter-top {
   width: 100%;
-  height: 60px;
+  min-height: 60px;
   border-bottom: 1px solid #d3d3d3;
+  text-align: center;
+  padding-bottom: 18px;
 }
 .filter .filter-top ul {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  transform: translateX(-50%);
+  display: inline-block;
 }
 .filter .filter-top ul::after {
   content: "";
@@ -251,7 +294,7 @@ body {
 }
 .filter .filter-top ul li {
   margin-right: 43px;
-  line-height: 60px;
+  margin-top: 18px;
   cursor: pointer;
   color: #666;
   -webkit-transition: all 0.3s;
@@ -423,6 +466,11 @@ body {
 .footer .footer-container {
   width: 1480px;
   margin: 0 auto;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .footer .footer-container .footer-info {
   font-size: 14px;
@@ -435,6 +483,9 @@ body {
   -ms-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   -o-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+#upload .header .header-container {
+  width: 1200px;
 }
 #upload .upload-title {
   position: absolute;
@@ -457,6 +508,9 @@ body {
   -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+#upload .wrapper .el-select {
+  width: 220px;
+}
 #upload .wrapper .line {
   border-bottom: 1px dashed #d3d3d3;
   margin-bottom: 40px;
@@ -474,6 +528,239 @@ body {
   background: #e2797d;
   border-color: #e2797d;
   color: #fff;
+}
+#info .header {
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  -ms-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+#info .wrapper::after {
+  content: "";
+  display: block;
+  visibility: hidden;
+  clear: both;
+}
+#info .details {
+  width: 1200px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  background: #fff;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+}
+#info .details .detail-header {
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #d3d3d3;
+}
+#info .details .detail-header .title {
+  font-size: 22px;
+  letter-spacing: 2px;
+  margin-bottom: 14px;
+}
+#info .details .detail-header .collection-info {
+  font-size: 14px;
+  color: #666;
+}
+#info .details .detail-header .collection-info .state {
+  padding: 3px 10px;
+  background: #d74b4f;
+  color: #fff;
+  border-radius: 3px;
+  margin-left: 5px;
+}
+#info .details .detail-body {
+  width: 100%;
+  text-align: center;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #d3d3d3;
+}
+#info .details .detail-body .detail-img {
+  max-width: 100%;
+  margin-bottom: 20px;
+}
+#info .details .detail-body .body-title {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  width: 850px;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #d3d3d3;
+  font-size: 20px;
+}
+#info .details .detail-body .collection-introduce {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  width: 850px;
+  margin: 0 auto;
+  text-align: left;
+  font-size: 14px;
+  color: #666;
+  margin-top: 20px;
+  line-height: 24px;
+}
+#info .details .detail-body .collection-introduce span,
+#info .details .detail-body .collection-introduce p,
+#info .details .detail-body .collection-introduce div,
+#info .details .detail-body .collection-introduce li,
+#info .details .detail-body .collection-introduce dt,
+#info .details .detail-body .collection-introduce dd,
+#info .details .detail-body .collection-introduce i,
+#info .details .detail-body .collection-introduce b {
+  font-size: 14px;
+  color: #666;
+  line-height: 24px;
+}
+#info .details .detail-link {
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+#info .details .detail-link .link-download {
+  display: inline-block;
+  padding: 8px 28px;
+  font-size: 14px;
+  color: #fff;
+  background: #d74b4f;
+  border-radius: 3px;
+}
+#info .details .pages {
+  width: 100%;
+  border-top: 1px solid #d3d3d3;
+}
+#info .details .pages::after {
+  content: "";
+  display: block;
+  visibility: hidden;
+  clear: both;
+}
+#info .details .pages a:hover span {
+  color: #d74b4f;
+}
+#info .details .pages a span {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  font-size: 14px;
+  color: #666;
+  line-height: 56px;
+}
+#info .other {
+  width: 260px;
+  background: #fff;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+#info .other .switch {
+  width: 100%;
+  height: 58px;
+  border-bottom: 1px solid #d3d3d3;
+  position: relative;
+}
+#info .other .switch span {
+  width: 50%;
+  text-align: center;
+  padding: 16px 0;
+  font-size: 16px;
+  cursor: pointer;
+  background: #fff;
+  border-top: 3px solid transparent;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+#info .other .switch .line {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 1px;
+  background: #d3d3d3;
+  height: 58px;
+}
+#info .other .switch .span-active {
+  height: 58px;
+  border-top: 3px solid #d74b4f;
+}
+#info .other .other-container {
+  width: 100%;
+  padding: 0 10px;
+}
+#info .other .other-container .hot-container::after {
+  content: "";
+  display: block;
+  visibility: hidden;
+  clear: both;
+}
+#info .other .other-container .hot-container ul {
+  margin-top: 30px;
+}
+#info .other .other-container .hot-container ul::after {
+  content: "";
+  display: block;
+  visibility: hidden;
+  clear: both;
+}
+#info .other .other-container .hot-container ul li {
+  width: 115px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+#info .other .other-container .hot-container ul li a img {
+  display: block;
+  width: 100%;
+}
+#info .other .other-container .hot-refesh {
+  width: 100%;
+  text-align: center;
+  margin: 20px 0 30px;
+}
+#info .other .other-container .hot-refesh span {
+  display: inline-block;
+  padding: 8px 10px;
+  background: #808080;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+#info .other .other-container .hot-refesh span:hover {
+  background: #d74b4f;
+}
+#search .header {
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  -ms-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  -o-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 @media screen and (max-width: 1479px) {
   .header .header-container {
@@ -501,6 +788,25 @@ body {
   }
   .wrapper > ul > li .info .author span {
     margin-top: 9px;
+  }
+  #info .details {
+    width: 920px;
+  }
+  #info .details .detail-body {
+    width: 100%;
+    text-align: center;
+    padding-bottom: 40px;
+    border-bottom: 1px solid #d3d3d3;
+  }
+  #info .details .detail-body .detail-img {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+  #info .details .detail-body .body-title {
+    width: 780px;
+  }
+  #info .details .detail-body .collection-introduce {
+    width: 780px;
   }
   .footer .footer-container {
     width: 1200px;
