--- a/mobile/css/style.less
+++ b/mobile/css/style.less
@@ -2,7 +2,7 @@
  * @Author: Alex chenzeyongjsj@163.com 
  * @Date: 2018-02-03 13:54:59 
  * @Last Modified by: Alex chenzeyongjsj@163.com
- * @Last Modified time: 2018-02-03 18:00:07
+ * @Last Modified time: 2018-02-07 14:37:46
  */
 
 
@@ -147,12 +147,6 @@ body {
     position: relative;
 }
 
-.public-wap {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
 .header {
     width: 100%;
     height: 2rem;
@@ -211,19 +205,24 @@ body {
     }
     .menu-container {
         width: 100%;
-        padding: 0.75rem 1rem;
+        padding: 0 1rem;
         background: rgba(255, 255, 255, 0.9);
         position: absolute;
         top: 2rem;
         left: 0;
         z-index: 9;
+        overflow: hidden;
+        .transi;
         .search {
             width: 100%;
-            height: 1.5rem;
+            height: 0;
             position: relative;
+            overflow: hidden;
+            z-index: 98;
+            .transi;
             input {
                 width: 100%;
-                height: 100%;
+                height: 1.5rem;
                 border-radius: 0.2rem;
                 border: 1px solid @border-color;
                 font-size: 0.6rem;
@@ -236,52 +235,153 @@ body {
                 right: 0.2rem;
                 font-size: 1rem;
                 color: #808080;
+                opacity: 0;
+                .transi;
             }
         }
         .filter {
             width: 100%;
+            height: 0;
+            margin-top: 0;
+            padding-top: 0;
+            border-top: 0 dashed @border-color;
+            overflow: hidden;
+            .transi;
+            ul {
+                width: 17.5rem;
+                &::after {
+                    .clear;
+                }
+                li {
+                    padding: 0 0.7rem;
+                    border: 1px solid @border-color;
+                    border-radius: 0.3rem;
+                    font-size: 0.6rem;
+                    background: #fff;
+                    margin-right: 0.6rem;
+                    margin-bottom: 0;
+                    letter-spacing: 0.08rem;
+                    color: @text-color;
+                    opacity: 0;
+                    .transi;
+                }
+                .li-active {
+                    color: @text-hover;
+                    border: 1px solid @text-hover;
+                }
+            }
+        }
+    }
+    /* 展开菜单 */
+    .menu-active {
+        padding: 0.75rem 1rem;
+        .search {
+            height: 1.6rem;
+            .icon-search {
+                opacity: 1;
+            }
+        }
+        .filter {
+            height: auto;
             margin-top: 0.75rem;
-            padding: 0.75rem 0;
+            padding-top: 0.75rem;
             border-top: 1px dashed @border-color;
+            ul {
+                li {
+                    padding: 0.4rem 0.7rem;
+                    margin-bottom: 0.6rem;
+                    opacity: 1;
+                }
+            }
         }
     }
 }
 
 .wrapper {
-    display: none;
-    width: 1480px;
-    margin: 70px auto;
+    width: 16.75rem;
+    margin: 0 auto;
     position: relative;
+    .select-filter {
+        width: 100%;
+        margin: 1.2rem 0;
+        &::after {
+            .clear;
+        }
+        >span {
+            display: block;
+            margin-right: 1rem;
+            &:last-of-type {
+                margin-right: 0;
+            }
+            a {
+                font-size: 0.7rem;
+                color: @text-color;
+            }
+        }
+        .fake-select {
+            width: 4.75rem;
+            height: 1.15rem;
+            position: absolute;
+            border: 1px solid @border-color;
+            border-radius: 0.1rem;
+            right: 4.95rem;
+            background: #fff;
+            top: 0.1rem;
+            .placeholder {
+                display: block;
+                color: @text-color;
+                line-height: 1.15rem;
+                font-size: 0.6rem;
+                margin-left: 0.3rem;
+            }
+            .iconfont {
+                font-size: 0.7rem;
+                position: absolute;
+                top: 45.5%;
+                -webkit-transform: translateY(-50%);
+                -moz-transform: translateY(-50%);
+                -ms-transform: translateY(-50%);
+                -o-transform: translateY(-50%);
+                transform: translateY(-50%);
+                right: 0.3rem;
+                color: @border-color;
+            }
+            .icon-close {
+                z-index: 8;
+                top: 48%;
+            }
+        }
+        .fake-2 {
+            right: 0;
+        }
+        .select-f {
+            width: 4.75rem;
+            height: 1.15rem;
+            font-size: 0.5rem;
+            color: @text-color;
+            margin-left: 0.2rem;
+            opacity: 0;
+            position: relative;
+            top: 0.1rem;
+        }
+    }
     >ul {
         width: 100%;
         &::after {
             .clear;
         }
         >li {
-            width: 276.5px;
-            height: 298px;
+            width: 8rem;
+            height: 9.1rem;
             overflow: hidden;
-            margin-right: 24px;
-            margin-bottom: 24px;
-            border: 1px solid transparent;
-            .transi;
-            &:hover {
-                border: 1px solid @border-color;
-                .info {
-                    background: #fff;
-                    .author {
-                        .float-right {
-                            opacity: 1;
-                        }
-                    }
-                }
-            }
-            &:nth-child(5n) {
+            margin-right: 0.75rem;
+            margin-bottom: 0.75rem;
+            &:nth-child(2n) {
                 margin-right: 0;
             }
             .img-container {
                 width: 100%;
-                height: 203px;
+                height: 5.85rem;
                 overflow: hidden;
                 position: relative;
                 .imgs {
@@ -297,57 +397,37 @@ body {
             }
             .info {
                 width: 100%;
-                height: 95px;
-                .transi;
+                background: #fff;
                 .title {
-                    padding: 0 8px;
+                    padding: 0 0.35rem;
                     width: 100%;
-                    height: 40px;
-                    line-height: 40px;
+                    height: 1.55rem;
+                    line-height: 1.55rem;
                     color: @text-color;
-                    border-bottom: 1px solid @border-color;
-                    font-size: 14px;
+                    border-bottom: 1px solid #e5e5e5;
+                    font-size: 0.5rem;
                 }
                 .author {
                     padding: 0 8px;
                     &::after {
                         .clear;
                     }
-                    span {
-                        font-size: 14px;
+                    .float-left {
+                        font-size: 0.5rem;
                         color: @text-color;
                         display: block;
-                        line-height: 25px;
-                        margin-top: 14px;
+                        line-height: 1.6rem;
                     }
                     .float-right {
-                        opacity: 0;
-                        width: 93px;
-                        height: 25px;
+                        padding: 0.1rem 0.3rem;
                         background: @text-hover;
-                        text-align: center;
                         color: #fff;
-                        border-radius: 3px;
-                        .transi;
+                        font-size: 0.5rem;
+                        border-radius: 0.1rem;
+                        margin-top: 0.3rem;
                     }
                 }
             }
-        }
-    }
-    .paging {
-        position: absolute;
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-        -moz-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-        -o-transform: translateX(-50%);
-        transform: translateX(-50%);
-        .el-dialog,
-        .el-pager li {
-            background: transparent;
-        }
-        button {
-            background-color: transparent !important;
         }
     }
 }
